5: bug-fix: dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@
         --border: 214 32% 91%;
     }
 
-    :dark {
+    .dark {
         --background: 222 47% 4%;
         --foreground: 213 31% 91%;
 
